Correct the overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
-body {
-  overflow-x: hidden;
+.headerHero {
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
