--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,8 +10,6 @@ $pink: #ff5a6e;
     padding-top: 10px;
 }
 
-
-
 .navLinks {
     flex: 0.6;
     display: flex;
@@ -84,4 +82,23 @@ ul {
 }
 
    
+}
+
+
+@media(max-width:1100px){
+    .header {
+        width: 90%;
+    }
+}
+
+@media(max-width:900px){
+    .header {
+        background-color: white;
+        width: 100%;
+        padding: 0 10%;
+        .navLinks{
+            display: none;
+        }
+    }
+
 }
